[package]
name = "into_response_derive"
version = "0.2.0"
edition = "2021"
description = "a simple into response derive for axum"
readme = "./README.md"
repository = "https://github.com/LyunKi/into-response-derive"
license = "MIT"
keywords = ["axum","macro"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.15"
syn = "1.0.86"
